2020-11-22  Robby Stephenson  <robby@periapsis.org>

	* Added barcode searching to MusicBrainz data source (Bug 429483).

2020-11-01  Robby Stephenson  <robby@periapsis.org>

	* Added barcode searching to Discogs data source.

2020-09-22  Robby Stephenson  <robby@periapsis.org>

	* Fixed crashing bug when checking in a loan (Bug 426815).

2020-09-13  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 3.3.3.
	* Improved Entrez data source to use API key and honor rate limit.

2020-09-02  Robby Stephenson  <robby@periapsis.org>

	* Improved ISBNdb data source to search for multiple ISBN values (Bug 415883).

2020-08-30  Robby Stephenson  <robby@periapsis.org>

	* Updated ISBNdb v2 API end point.

2020-08-22  Robby Stephenson  <robby@periapsis.org>

	* Updated DBC Open Search data source.

2020-08-21  Robby Stephenson  <robby@periapsis.org>

	* Fixed http headers for Amazon data source (Bug 425129).

2020-08-17  Robby Stephenson  <robby@periapsis.org>

	* Fixed regression for duplicated creation date (Bug 422127).

2020-08-10  Robby Stephenson  <robby@periapsis.org>

	* Fixed column header visibility after reordering fields (Bug 422298).

2020-08-07  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 3.3.2.

2020-08-06  Robby Stephenson  <robby@periapsis.org>

	* Updated KinoPoisk data source.

2020-08-02  Robby Stephenson  <robby@periapsis.org>

	* Updated Allocine data source.
	* Updated KNewStuff categories.

2020-07-26  Robby Stephenson  <robby@periapsis.org>

	* Improved Goodreads importer.

2020-05-31  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 3.3.1.
	* Updated Dark Horse Comics data source.

2020-05-30  Robby Stephenson  <robby@periapsis.org>

	* Updated filter dialog to allow matching against equal empty string.

2020-05-27  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with creation date for duplicated entries (Bug 422127).

2020-04-27  Robby Stephenson  <robby@periapsis.org>
