@@ -1,5 +1,6 @@
 2020-11-22  Robby Stephenson  <robby@periapsis.org>
 
+	* Fixed text in group view to use correct color (Bug 429475).
 	* Added barcode searching to MusicBrainz data source (Bug 429483).
 
 2020-11-01  Robby Stephenson  <robby@periapsis.org>
